# SpatialVortex

./: .dockerignore  .env.example  .gitignore  .gitmodules  ASI_ARCHITECTURE_AUDIT.md  Cargo.toml  Dockerfile  LICENSE  README.md  RSI.md  SOTA_ROADMAP.md  START_SERVERS.ps1  Start.md  config.toml  config.toml.example  docker-compose.yml  download.ps1  fix_ollama.ps1  setup_cwc_mistral.ps1  test_ollama.ps1
aimodel/: Cargo.toml  DATA_JOURNEY.md  DIFFUSION_INTEGRATION.md  DIFFUSION_LM_RESEARCH.md  MONITORING_GUIDE.md  MSA_RESEARCH.md  README.md  arc_100.txt  arc_100b.txt  arc_debug1.txt  arc_debug2.txt  arc_eval_results.json  arc_eval_v2.json  arc_eval_v3.json  arc_eval_v4.json  arc_eval_vortex.json  arc_eval_vortex2.json  arc_eval_vortex2_output.txt  arc_eval_vortex_output.txt  arc_full2.txt  arc_full_debug.txt  arc_small.txt  benchmark_debug_10.json  benchmark_debug_tqa.json  benchmark_debug_tqa2.json  benchmark_debug_v3.json  benchmark_delib.json  benchmark_delib2.json  benchmark_fewshot.json  benchmark_output.txt  benchmark_truth.json  benchmark_truth2.json  eval_babi10_12_18_20.json  eval_babi10_v5.json  eval_babi1718_v2.json  eval_babi1718_v3.json  eval_babi1718_v4.json  eval_babi1718_v5.json  eval_babi18_0_20.json  eval_babi18_arch.json  (+95 more)
aimodel/docs/: ARCHITECTURE_CONCEPTS.md  DATASET_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  RSI_MACROS_DESIGN.md  WEB_CRAWLER_ARCHITECTURE.md
aimodel/examples/: demo.rs
aimodel/rsi_macros/: Cargo.toml
aimodel/rsi_macros/src/: lib.rs
aimodel/src/: engine.rs  error.rs  lib.rs
aimodel/src/ai/: consensus.rs  flux_reasoning.rs  mod.rs  orchestrator.rs
aimodel/src/cognition/: atman.rs  constitution.rs  memory.rs  mod.rs  rag.rs  reasoning.rs  thinking.rs  tools.rs  verified_patterning.rs  vortex_runner.rs
aimodel/src/core/: mod.rs  unified_generative.rs
aimodel/src/core/sacred_geometry/: change_dot.rs  continuous_learning.rs  flux_matrix.rs  flux_transformer.rs  geometric_inference.rs  matrix_guided_inference.rs  mod.rs  node_dynamics.rs  object_utils.rs  pattern_coherence.rs  vortex_math.rs
aimodel/src/data/: attributes.rs  benchmark_eval.rs  hf_datasets.rs  inference_audit.rs  live_benchmarks.rs  mod.rs  models.rs  real_benchmarks.rs
aimodel/src/ml/: arc_trajectory.rs  backends.rs  benchmark_weighted_retrieval.rs  betr_selector.rs  burn_calm.rs  calm.rs  calm_web_integration.rs  causal_model.rs  conceptual_agglomeration.rs  consciousness_learner.rs  continuous_learning.rs  dynamic_rsi.rs  ebrm.rs  ebrm_alignment.rs  fast_knowledge_acquisition.rs  fast_web_learner.rs.bak  flux_compression_sota.rs  flux_embedding.rs  flux_object_macro.rs  generative_arch.rs  geometric_world_model.rs  gpu_trainer.rs  grid_encoder.rs  hallucinations.rs  huggingface.rs  integration_test.rs  jepa.rs  learning_to_rank.rs  mod.rs  neuro_symbolic.rs  optimized_ops.rs  parallel_fusion.rs  pathway.rs  pillar_integration.rs  rag_search.rs  reasoning_engine.rs  recursive_chains.rs  rl_actor_critic.rs  sacred_attention.rs  sacred_moe.rs  (+19 more)
aimodel/src/ml/training/: burn_sso.rs  mod.rs  spectral_sphere_optimizer.rs
aimodel/src/serving/: batch_scheduler.rs  chat_api.rs  mcp_server.rs  mod.rs  moe_gate.rs  optimized_ops.rs
aimodel/src/storage/: embeddings.rs  mod.rs  rocksdb_store.rs  trait_ledger.rs  unified_store.rs
aimodel/src/transport/: mod.rs  wtransport_server.rs
aimodel/src/visualization/: mod.rs
aimodel/static/: chat.html
benchmarks/: Cargo.toml  README.md
benchmarks/custom/: elp_accuracy.rs  flux_position_accuracy.rs  geometric_reasoning_benchmark.rs  humanities_final_exam.rs  humanities_questions_generator.rs  sacred_boost_verification.rs
benchmarks/custom/performance/: README.md  asi_orchestrator_bench.rs  lock_free_performance.rs  production_benchmarks.rs  runtime_performance.rs  vector_search_benchmark.rs
benchmarks/knowledge_graph/: fb15k237_test.rs
benchmarks/scripts/: README.md  download_datasets.ps1  download_datasets.sh  verify_datasets.ps1  verify_datasets.sh
benchmarks/semantic/: sts_benchmark_test.rs
benchmarks/src/: compression.rs  custom.rs  knowledge_graph.rs  lib.rs  qa.rs  reasoning.rs  semantic.rs  sota.rs
eustress/: Cargo.toml  EUSTRESS_ENGINE_MULTI_SCENE.md  README.md
eustress/crates/arc-agent/: Cargo.toml
eustress/crates/arc-agent/src/: delta_bridge.rs  main.rs  policy.rs  toml_writer.rs
eustress/crates/arc-policy/: Cargo.toml
eustress/crates/arc-policy/src/: exploration.rs  goal_inference.rs  level_analysis.rs  lib.rs  mcts.rs  object_tracker.rs  scene_mirror.rs  space_writer.rs  symbolic_decomposer.rs  world_model.rs
eustress/crates/arc-types/: Cargo.toml
eustress/crates/arc-types/src/: lib.rs
eustress/crates/cli/: Cargo.toml
eustress/crates/cli/src/: main.rs
eustress/crates/common/: ARCHITECTURE.md  Cargo.toml
eustress/crates/common/bevy-camera-controller/: Cargo.toml  README.md
eustress/crates/common/eustress-networking/: Cargo.toml
eustress/crates/common/src/: adornments.rs  attributes.rs  classes.rs  default_scene.rs  eustress_format.rs  generation.rs  iggy_delta.rs  iggy_queue.rs  lib.rs  orbital.rs  parameters.rs  project_manifest.rs  properties.rs  scene.rs  scene_ops.rs  sim_record.rs  sim_stream.rs  toml_materializer.rs  types.rs  usd.rs  utils.rs  xr.rs
eustress/crates/embedvec/: Cargo.toml  README.md
eustress/crates/embedvec/src/: error.rs  (+10 more)
eustress/crates/engine/: Cargo.toml  build.rs  build_log.txt  create_icon_png.rs  errors.txt  errors2.txt  icon.rc
eustress/crates/forge/: Cargo.toml
eustress/crates/forge-sdk/: Cargo.toml
eustress/crates/mcp/: Cargo.toml  README.md
eustress/crates/server/: Cargo.toml
eustress/crates/spatial-llm/: Cargo.toml
eustress/crates/vortex-core/: Cargo.toml
eustress/crates/vortex-grid2d/: Cargo.toml
eustress/crates/vortex-scene3d/: Cargo.toml
eustress/knowledge/: vortex_knowledge.json
eustress/scripts/: start_arc_session.bat  start_arc_session.sh  stop_arc_session.bat  stop_arc_session.sh
viewer/: Cargo.toml
viewer/src/: lib.rs  main.rs  mapping.rs  model.rs  seeds.rs  transformer.rs
viewer/tests/: mapping_tests.rs
(+1618 files in other folders)
