[package]
name = "aimodel"
version = "0.1.0"
edition = "2021"
description = "Distilled SpatialVortex AGI/ASI seed - Sacred geometry + continuous latent generation"
license = "MIT"
repository = "https://github.com/WeaveITMeta/aimodel"

[features]
default = ["onnx", "burn-cpu"]
onnx = ["ort", "tokenizers"]
burn-cpu = ["burn", "burn-ndarray", "burn-autodiff"]
burn-gpu = ["burn", "burn-tch", "burn-autodiff"]
burn-wgpu = ["burn", "dep:burn-wgpu", "burn-autodiff"]
bevy_viz = ["bevy"]
transport = ["wtransport"]
storage = ["rocksdb"]
embeddings = ["embedvec"]
# GPU training (use: cargo run --features gpu)
gpu = ["burn-wgpu"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.13", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

# Inference - ort (ONNX Runtime) as primary
ort = { version = "2.0.0-rc.11", optional = true }
tokenizers = { version = "0.21", optional = true }

# ML Training - Burn framework
burn = { version = "0.16", optional = true, features = ["ndarray"] }
burn-ndarray = { version = "0.16", optional = true }
burn-autodiff = { version = "0.16", optional = true }
burn-tch = { version = "0.16", optional = true }
burn-wgpu = { version = "0.16", optional = true }

# Networking - WebTransport (QUIC)
wtransport = { version = "0.2", optional = true }

# Storage - RocksDB for hot path
rocksdb = { version = "0.22", optional = true }

# Vector embeddings
embedvec = { version = "0.5", optional = true }

# Visualization - Bevy 3D
bevy = { version = "0.15", optional = true }

# Math/SIMD
rayon = "1.10"
num-traits = "0.2"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
