[package]
name = "vortex"
version = "0.1.0"
edition = "2021"
description = "Distilled SpatialVortex AGI/ASI seed — sacred geometry inference, continuous latent generation, and recursive self-improvement"
license = "MIT"
repository = "https://github.com/WeaveITMeta/SpatialVortex"
homepage = "https://github.com/WeaveITMeta/SpatialVortex"
readme = "README.md"
keywords = ["ai", "machine-learning", "inference", "sacred-geometry", "self-improvement"]
categories = ["science", "algorithms"]
authors = ["WeaveITMeta"]
exclude = ["data/", "*.csv", "*.jsonl", "*.json", "full_run_output.txt", "benchmark_*.json"]

[lib]
name = "vortex"
path = "src/lib.rs"

[features]
default = ["burn-cpu", "web-learning"]  # Burn (pure Rust) instead of onnx
onnx = ["ort", "tokenizers"]
burn-cpu = ["burn", "burn-ndarray", "burn-autodiff"]
burn-gpu = ["burn", "burn-tch", "burn-autodiff"]
burn-wgpu = ["burn", "dep:burn-wgpu", "burn-autodiff"]
bevy_viz = ["bevy"]
transport = ["wtransport"]
storage = ["rocksdb"]
embeddings = ["embedvec"]
# GPU training (use: cargo run --features gpu)
gpu = ["burn-wgpu"]
# Web server for chat
web = ["actix-web", "actix-cors", "actix-files"]
# Web learning with high-throughput crawler
web-learning = ["dep:reqwest", "dep:urlencoding", "dep:scraper", "dep:html2md", "dep:dashmap", "dep:governor", "dep:flume"]
# Classical ML augmentation (linfa scikit-learn-like toolkit)
linfa-ml = ["dep:linfa", "dep:linfa-clustering", "dep:linfa-reduction", "dep:linfa-linear", "dep:ndarray"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.13", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

# Inference - ort (ONNX Runtime) as primary
ort = { version = "2.0.0-rc.11", optional = true }
tokenizers = { version = "0.21", optional = true }

# ML Training - Burn framework
burn = { version = "0.16", optional = true, features = ["ndarray"] }
burn-ndarray = { version = "0.16", optional = true }
burn-autodiff = { version = "0.16", optional = true }
burn-tch = { version = "0.16", optional = true }
burn-wgpu = { version = "0.16", optional = true }

# Networking - WebTransport (QUIC)
wtransport = { version = "0.2", optional = true }

# Storage - RocksDB for hot path
rocksdb = { version = "0.22", optional = true }

# Vector embeddings
embedvec = { version = "0.5", optional = true }

# Visualization - Bevy 3D
bevy = { version = "0.15", optional = true }

# Classical ML — linfa (scikit-learn for Rust, pure Rust, ndarray 0.16)
linfa = { version = "0.8", optional = true }
linfa-clustering = { version = "0.8", optional = true }
linfa-reduction = { version = "0.8", optional = true }
linfa-linear = { version = "0.8", optional = true }
ndarray = { version = "0.16", optional = true, features = ["rayon"] }

# Math/SIMD
rayon = "1.10"
num-traits = "0.2"
rand = "0.8"

# Web server (optional)
actix-web = { version = "4.4", optional = true }
actix-cors = { version = "0.7", optional = true }
actix-files = { version = "0.6", optional = true }
env_logger = "0.11"

# CLI for benchmark harness
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
atty = "0.2"

# HuggingFace Hub for dataset downloading
hf-hub = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json", "http2"], optional = true }
urlencoding = { version = "2.1", optional = true }

# High-throughput web crawler
scraper = { version = "0.20", optional = true }
html2md = { version = "0.2", optional = true }
dashmap = { version = "6.1", optional = true }
governor = { version = "0.6", optional = true }
flume = { version = "0.11", optional = true }
futures = "0.3"
url = "2.5"

# RSI Macros (proc-macro crate for compile-time self-improvement)
# Uses path for local dev; publish rsi_macros to crates.io first, then switch to version
rsi_macros = { path = "rsi_macros", version = "0.1.0" }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "spatialvortex-eval"
path = "src/bin/eval_harness.rs"

[[bin]]
name = "benchmark_crawler"
path = "src/bin/benchmark_crawler.rs"

[[bin]]
name = "vortex-cli"
path = "src/bin/vortex_cli.rs"

[[bin]]
name = "vortex-api"
path = "src/bin/vortex_api.rs"
required-features = ["web"]
