[package]
name = "spatialvortex-benchmarks"
version = "1.0.0"
edition = "2021"

[dependencies]
spatial-vortex = { path = "..", default-features = false, features = ["rag", "agents", "burn-cpu"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }
indicatif = "0.17"
chrono = "0.4"
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "run_benchmarks"
path = "src/bin/run_benchmarks.rs"

[features]
quick = []  # Run quick subset of benchmarks
