[workspace]
members = [
    # ── EustressEngine submodule crates ──────────────────────────
    "EustressEngine/eustress/crates/common",
    "EustressEngine/eustress/crates/common/bevy-camera-controller",
    "EustressEngine/eustress/crates/common/eustress-networking",
    "EustressEngine/eustress/crates/runtime",
    "EustressEngine/eustress/crates/engine",
    "EustressEngine/eustress/crates/client",
    "EustressEngine/eustress/crates/server",
    "EustressEngine/eustress/crates/web",
    "EustressEngine/eustress/crates/backend",
    "EustressEngine/eustress/crates/forge",
    "EustressEngine/eustress/crates/forge-sdk",
    "EustressEngine/eustress/crates/mcp",
    "EustressEngine/eustress/crates/player-mobile",
    "EustressEngine/eustress/crates/bliss",
    "EustressEngine/eustress/crates/embedvec",
    "EustressEngine/eustress/crates/spatial-llm",
    "EustressEngine/eustress/crates/geo",
    "EustressEngine/eustress/crates/texture-gen",
    "EustressEngine/eustress/crates/workshop",
    "EustressEngine/eustress/crates/cli",
    "EustressEngine/eustress/benches/instance-capacity",
    # ── Local crates (not in submodule) ──────────────────────────
    "crates/arc-types",
    "crates/arc-agent",
    "crates/arc-policy",
    "crates/vortex-core",
    "crates/vortex-grid2d",
    "crates/vortex-scene3d",
]

resolver = "2"

[workspace.dependencies]
# Core Bevy 0.18 (uses wgpu 28 for Slint GPU renderer compatibility)
bevy = { version = "0.18", default-features = false }

# UI - Slint from git with software renderer + FemtoVG GPU renderer (OpenGL)
# NOTE: renderer-femtovg-wgpu would share Bevy's wgpu device, but Slint master targets wgpu 28
# while Bevy 0.18 uses wgpu 27. Switch to renderer-femtovg-wgpu when Bevy upgrades to wgpu 28.
slint = { git = "https://github.com/slint-ui/slint", branch = "master", features = ["std", "compat-1-2", "renderer-software", "renderer-femtovg"] }
# egui REMOVED - using Slint exclusively

# Input - DISABLED until leafwing-input-manager supports Bevy 0.19
# leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main", default-features = false, features = ["asset", "mouse", "keyboard"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ron = "0.8"

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rfd = "0.15"

# Networking (Lightyear 0.19 + QUIC)
lightyear = "0.19"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2.0"
rcgen = "0.13"
bincode = "1.3"

# P2P & CRDTs for Persistent Distributed Worlds
loro = "1.4"  # High-perf CRDT library
bevy_quinnet = "0.14"  # QUIC client/server for P2P (Bevy 0.19 compatible)
quinn = "0.11"  # Underlying QUIC transport

# Physics (Avian 0.6.0 — crates.io release, Bevy 0.18 compatible)
avian3d = { version = "0.6", default-features = false, features = ["3d", "f32", "parry-f32", "debug-plugin", "parallel", "collider-from-mesh", "bevy_scene", "xpbd_joints"] }

# Luau scripting runtime (Roblox Luau via mlua)
mlua = { version = "0.10", features = ["luau", "serialize", "send"] }

# bytes — shared buffer type for EustressStream payloads
bytes = "1.7"

# Zero-copy serialization for ECS scene deltas (rkyv 0.8)
rkyv = { version = "0.8", features = ["std"] }

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

# Hotpatching profile - use with: cargo run --profile hotpatch
[profile.hotpatch]
inherits = "dev"
opt-level = 1

[profile.hotpatch.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = false
codegen-units = 8
strip = true

