[package]
name = "windsurf"
version = "0.1.0"
edition = "2021"
authors = ["WeaveSolutions"]

[dependencies]
bevy = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
murmur3 = "0.5"
anyhow = "1"
whisper-rs = { version = "0.10", optional = true }
tokenizers = { version = "0.15", optional = true }
tch = "0.15"
memmap2 = "0.9"

[features]
default = []
stt = ["whisper-rs"]
nlp = ["tokenizers"]
