[package]
name = "rsi_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for RSI (Recursive Self-Improvement) code generation"
license = "MIT"
repository = "https://github.com/WeaveITMeta/SpatialVortex"
keywords = ["ai", "machine-learning", "macros", "self-improvement"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
