[package]
name = "eustress-arc-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eustress-arc-agent"
path = "src/main.rs"

[dependencies]
eustress-common = { path = "../common", features = ["iggy-streaming"] }
eustress-arc-types = { path = "../arc-types" }
eustress-arc-policy = { path = "../arc-policy" }
tokio = { version = "1", features = ["full"] }
iggy = { version = "0.9", default-features = false, features = ["tokio-runtime"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
