[package]
name = "eustress-arc-agent"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "eustress-arc-agent"
path = "src/main.rs"

[dependencies]
eustress-arc-types = { path = "../arc-types" }
eustress-arc-policy = { path = "../arc-policy" }
eustress-vortex-grid2d = { path = "../vortex-grid2d" }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

# EustressStream (optional — standalone mode works without it)
eustress-common = { path = "../../EustressEngine/eustress/crates/common", features = ["streaming"], optional = true }
eustress-stream = { path = "../../EustressEngine/eustress/crates/stream", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
bytes = { version = "1.7", optional = true }
rkyv = { version = "0.8", features = ["std"], optional = true }

[features]
default = []
eustress-streaming = ["eustress-common", "eustress-stream", "uuid", "bytes", "rkyv"]
