[package]
name = "eustress-arc-policy"
version = "0.2.0"
edition = "2021"

[dependencies]
eustress-arc-types = { path = "../arc-types" }
eustress-vortex-core = { path = "../vortex-core" }
eustress-vortex-grid2d = { path = "../vortex-grid2d" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tracing = "0.1"
dirs = "5"
